- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 3.4.0-beta1
 - 
    None
 - 
    Windows 7
 
- 
        8a63f9ea9d53a0944e7d6975a40d4a9045cab600
 
It's a bit hard to notice it in the video, but it is easily reproducible.
struct Foo { int foo; };
int main()
{
    Foo foo1;
    Foo foo2;
    Foo foo3;
    Foo foo4;
    Foo foo5;
    Foo foo6;
    Foo foo7;
    Foo foo8;
    Foo foo9;
    return 0;
}
| For Gerrit Dashboard: QTCREATORBUG-13957 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 109258,4 | Debugger: Fix asynchronous tooltip updates | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |