Debugger: Fix asynchronous tooltip updates

Task-number: QTCREATORBUG-13957
Change-Id: I1e99dd4aa2b18b47a4d901bc64693f294f9e6dfa
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: hjk <hjk@theqtcompany.com>